# typedtensor

./: LICENSE  README.md  pyproject.toml
examples/transformers/models/gpt2/: modeling_gpt2.py
examples/ttransformers/models/gpt2/: modeling_gpt2.py
typed-tensor/: dimension.py  shape_info.py  typed_tensor.py
typedtensor/: __init__.py  dimension.py  shape_info.py  torch.py  ttorch.py  typed_tensor.py  utils.py
typedtensor/pytorch/: __init__.py  functions.py
typedtensor/pytorch/nn/: __init__.py
typedtensor/torch/: __init__.py
typedtensor/torch/nn/: __init__.py
